--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ matplotlib = "^3.10.0"
 seaborn = "^0.13.2"
 
 [tool.poetry.scripts]
+summarize = 'pan25_genai_detection.dataset.summarize:main'
 news-source = 'pan25_genai_detection.dataset.news_source:main'
 llm-generate = 'pan25_genai_detection.dataset.llm_generate:main'
 
