--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ jinja2 = "^3.1.5"
 google-cloud-aiplatform = "^1.81.0"
 matplotlib = "^3.10.0"
 seaborn = "^0.13.2"
+optimum = "^1.24.0"
 
 [tool.poetry.scripts]
 summarize = 'pan25_genai_detection.dataset.summarize:main'
