Start dataset sampling code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,11 +31,13 @@ google-cloud-aiplatform = "^1.81.0"
 matplotlib = "^3.10.0"
 seaborn = "^0.13.2"
 optimum = "^1.24.0"
+more-itertools = "^10.6.0"
 
 [tool.poetry.scripts]
 summarize = 'pan25_genai_detection.dataset.summarize:main'
 news-source = 'pan25_genai_detection.dataset.news_source:main'
 llm-generate = 'pan25_genai_detection.dataset.llm_generate:main'
+dataset-sample = 'pan25_genai_detection.dataset.dataset_sample:main'
 
 [build-system]
 requires = ["poetry-core"]
