Add DIPPER paraphraser

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,12 +35,15 @@ more-itertools = "^10.6.0"
 pyppmd = "^1.1.1"
 scikit-learn = "^1.6.1"
 tira = "^0.0.160"
+nltk = "^3.9.1"
+sentencepiece = "^0.2.0"
 
 [tool.poetry.scripts]
 summarize = 'pan25_genai_detection.dataset.summarize:main'
 news-source = 'pan25_genai_detection.dataset.news_source:main'
 llm-generate = 'pan25_genai_detection.dataset.llm_generate:main'
 dataset-sample = 'pan25_genai_detection.dataset.dataset_sample:main'
+dataset-paraphrase = 'pan25_genai_detection.dataset.paraphrase:main'
 pan25-baseline = 'pan25_genai_detection.baselines.cli:main'
 pan25-evaluator = 'pan25_genai_detection.evaluator.evaluator:main'
 
